--- a/style.css
+++ b/style.css
@@ -14,6 +14,50 @@
 .menus{
     display: flex;
 }
-.logo.photo{
-    width: 120px;
+/* .logo.photo{
+    width: 50%;
+} */
+.item{
+  margin: 10px;
+  padding: 10px;
+  font size: 20px;
+  cursor: pointer;
+}
+.item:hover{
+    color: brown;
+}
+.ig{
+    width: 300px;
+}
+.photo{
+    width: 300px;
+}
+.banner-container{
+    display: flex;
+    justify-content: space-around;
+    height: 100vh;
+    align-items: center;
+    /* border: 2px solid gray; */
+    color: white;
+    background-image: url("./images/background.png"),linear-gradient(45deg,rgb(8 8 8),rgb(53 53 53));
+}
+.xy{
+    font-size: 55px;
+    font-weight: bold;
+}
+.xx{
+    font-size: 18px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+
+}
+.btn{
+    padding: 10px 20px;
+    background-color: tomato;
+    color: white;
+    border: none;
+    border-radius: 2px;
+}
+.btn:hover{
+    color: blue;
 }
